--- a/META.yml
+++ b/META.yml
@@ -13,9 +13,11 @@ meta-spec:
   version: 1.4
 name: App-PipeFilter
 requires:
+  JSON::Path: 0
   JSON::XS: 0
   Moose: 0
   MooseX::Getopt: 0
+  YAML::Syck: 0
 resources:
   repository: git://github.com/rcaputo/app-pipefilter.git
-version: 0.002
+version: 0.003
